Add service Messenge

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -41,7 +41,7 @@ body{
       }
       
       li{
-          color:red ;
+          color:rgb(0, 0, 0) ;
           list-style-type:none;
       }
       
@@ -152,7 +152,7 @@ body{
         }
         
         .mms>p{
-          color: tomato;
+          color: rgb(0, 0, 0);
           position: relative;
           top: -110px;
           left: -150px;
