--- a/src/style/style.css
+++ b/src/style/style.css
@@ -212,14 +212,8 @@ input[type=text]{
         font-family: Arial, Helvetica, sans-serif;
         font-size: 28px;
         }
-        .f{
-          position: relative;
-          left: 1100px;
-          top: 80px;
-          color:#ffa31a;
-          width: 20px;
-          height: 10px;
-        }
+       
+        
         body{
 
 background-color: #000000;
@@ -227,6 +221,57 @@ background-color: #000000;
 
         }
         .inicio {
-        width: 90%;
-        height: 45%;
+          font-family: Arial, Helvetica, sans-serif;
+          background-color: #292929;
+        
+          width: 80%;
+          max-width: 1235px;
+          margin: auto;
+          margin-top: 100px;
+          padding: 30px;
+          height: 500px;
+          overflow: auto;
+          border-radius: 150px;
+          position: relative;
+          top: -60px;
+          
+          box-shadow: 0px 0px 10px #ffa31a;
         }
+        .inicio>button{
+          font-family: Arial, Helvetica, sans-serif;
+          
+          left: -1%;
+          width: 30%;
+          max-width: 1235px;
+          margin: auto;
+          margin-top: 250px;
+          padding: 30px;
+          height: 100px;
+          overflow: auto;
+          border-radius: 150px;
+          position: relative;
+          top: -60px;
+  
+        }
+        h3{
+          left: 20%;
+          
+          text-align: center;
+           Color:white;
+           top: -30px;
+  
+
+        }
+        h1{
+          Color:white;
+          left: 100;
+        
+          text-align: center;
+          padding: 0px;
+          height: 20px;
+          max-width: 1235px;
+          top: -30px;
+  
+        }
+        
+     
